# insta_sync

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  test_instagram.py
config/: settings.py  urls.py
instagram/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
instagram/migrations/: 0001_initial.py  0002_alter_post_media_url_alter_post_permalink.py  0003_alter_post_media_url_alter_post_permalink.py
instagram/services/: exceptions.py  instagram_client.py  instagram_service.py  sync_service.py
